--- a/package.json
+++ b/package.json
@@ -5,5 +5,21 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  }
+  },
+  "name": "namaste-react",
+  "version": "1.0.0",
+  "description": "Namaste React",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devansh4399/NamasteReact.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/devansh4399/NamasteReact/issues"
+  },
+  "homepage": "https://github.com/devansh4399/NamasteReact#readme"
 }
